// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphReducer should handle all defined error types: rejected types GET_GRAPH_REPORT_CAPACITY_RHSM 1`] = `
{
  "result": {
    "legend": {},
    "reportCapacity": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "tally": {},
  },
  "type": "GET_GRAPH_REPORT_CAPACITY_RHSM_REJECTED",
}
`;

exports[`GraphReducer should handle all defined error types: rejected types GET_GRAPH_TALLY_RHSM 1`] = `
{
  "result": {
    "legend": {},
    "reportCapacity": {},
    "tally": {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "GET_GRAPH_TALLY_RHSM_REJECTED",
}
`;

exports[`GraphReducer should handle all defined fulfilled types: fulfilled types GET_GRAPH_REPORT_CAPACITY_RHSM 1`] = `
{
  "result": {
    "legend": {},
    "reportCapacity": {
      "data": {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
    "tally": {},
  },
  "type": "GET_GRAPH_REPORT_CAPACITY_RHSM_FULFILLED",
}
`;

exports[`GraphReducer should handle all defined fulfilled types: fulfilled types GET_GRAPH_TALLY_RHSM 1`] = `
{
  "result": {
    "legend": {},
    "reportCapacity": {},
    "tally": {
      "data": {
        "test": "success",
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "GET_GRAPH_TALLY_RHSM_FULFILLED",
}
`;

exports[`GraphReducer should handle all defined pending types: pending types GET_GRAPH_REPORT_CAPACITY_RHSM 1`] = `
{
  "result": {
    "legend": {},
    "reportCapacity": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
    "tally": {},
  },
  "type": "GET_GRAPH_REPORT_CAPACITY_RHSM_PENDING",
}
`;

exports[`GraphReducer should handle all defined pending types: pending types GET_GRAPH_TALLY_RHSM 1`] = `
{
  "result": {
    "legend": {},
    "reportCapacity": {},
    "tally": {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": {},
      "pending": true,
    },
  },
  "type": "GET_GRAPH_TALLY_RHSM_PENDING",
}
`;

exports[`GraphReducer should handle specific defined types: defined type SET_GRAPH_LEGEND 1`] = `
{
  "result": {
    "legend": {
      "lorem": true,
    },
    "reportCapacity": {},
    "tally": {},
  },
  "type": "SET_GRAPH_LEGEND",
}
`;
